--- a/resources/sass/customer/pages/_list_article.scss
+++ b/resources/sass/customer/pages/_list_article.scss
@@ -56,6 +56,9 @@
     .l__a {
         .l__a-article {
             .content-title-moblie{
+                h5{
+                    font-size: 1rem;
+                }
                 display: block;
             }
             .l__a-article-img {
