--- a/resources/sass/customer/layout/_filter.scss
+++ b/resources/sass/customer/layout/_filter.scss
@@ -33,6 +33,7 @@
             position: relative;
             cursor: pointer;
             min-width: 150px;
+            max-width: 150px;
             padding: 5px 10px;
             border-right: 1px solid #ecf0f1;
             .filter-link {
