--- a/resources/sass/customer/pages/_list_article.scss
+++ b/resources/sass/customer/pages/_list_article.scss
@@ -9,6 +9,7 @@
             .img {
                 transition: 0.4s;
                 height: 100%;
+                min-height: 170px;
                 object-fit: cover;
                 display: block;
                 border-radius: 10px;
