--- a/resources/sass/customer/pages/_list_article.scss
+++ b/resources/sass/customer/pages/_list_article.scss
@@ -1,29 +1,33 @@
 .l__a {
     .l__a-article {
-        .content-title-moblie{
+        border: 1px solid #ecf0f1;
+        border-radius: 10px;
+        margin-left: 0;
+        &:hover {
+            box-shadow: 3px 3px 13px 3px #95a5a617;
+        }
+        .content-title-moblie {
             display: none;
         }
         cursor: pointer;
         .l__a-article-img {
             overflow: hidden;
+            max-height: 160px;
+            padding-left: 0;
             .img {
+                background: rgb(221, 221, 221);
                 transition: 0.4s;
                 height: 100%;
-                object-fit: cover;
+                object-fit: contain;
                 display: block;
             }
         }
         .l__a-article-content {
             padding-bottom: 5px !important;
             padding-left: 5px !important;
-            border: 1px solid #ecf0f1;
-            border-radius: 10px;
             border-top: none;
             border-left: none;
-            &:hover{
-                box-shadow: 3px 3px 13px 3px #95a5a617;
-            }
-            a{
+            a {
                 display: block;
                 color: #2c3e50;
                 .content-title {
@@ -32,9 +36,7 @@
                     font-weight: bold;
                     color: #2980b9;
                 }
-                .content-price {
-
-                }
+                .content-price {}
                 .content-desc {
                     color: #7f8c8d;
                     font-size: 0.9rem;
@@ -46,17 +48,18 @@
             .card-time {
                 font-size: 0.9rem;
             }
-            .card-heart{
+            .card-heart {
                 font-size: 30px;
             }
         }
     }
 }
+
 @media only screen and (max-width: 768px) {
     .l__a {
         .l__a-article {
-            .content-title-moblie{
-                h5{
+            .content-title-moblie {
+                h5 {
                     font-size: 1rem;
                 }
                 display: block;
@@ -68,7 +71,7 @@
             }
             .l__a-article-content {
                 border: none !important;
-                a{
+                a {
                     .content-title {
                         display: none;
                         font-size: 0.8rem;
@@ -86,12 +89,11 @@
                     .card-time {
                         font-size: 0.8rem;
                     }
-                    .card-heart{
+                    .card-heart {
                         font-size: 20px;
                     }
                 }
             }
-
         }
     }
 }
