--- a/resources/sass/customer/style.scss
+++ b/resources/sass/customer/style.scss
@@ -46,6 +46,7 @@
 @import './components/line';
 @import './components/data-list';
 @import './components/action_menu_mobile';
+@import './components/sidebar_filter';
 
 /**======================*
     Import pages
