--- a/resources/sass/customer/base/_font.scss
+++ b/resources/sass/customer/base/_font.scss
@@ -33,10 +33,16 @@
     font-display: block;
 }
 
-
 @font-face {
     font-family: 'Nunito-bi';
     src: url(/fonts/NunitoSans-BlackItalic.ttf);
+    font-style: normal;
+    font-display: block;
+}
+
+@font-face {
+    font-family: 'Nunito-re';
+    src: url(/fonts/Nunito-Regular.ttf);
     font-style: normal;
     font-display: block;
 }
