--- a/resources/sass/customer/components/_action_menu_mobile.scss
+++ b/resources/sass/customer/components/_action_menu_mobile.scss
@@ -1,4 +1,5 @@
 .menu__mobile {
+    display: none;
     box-shadow: 0px 4px 10px 2px #95a5a6 !important;
     width: 100%;
     margin: auto;
@@ -33,5 +34,11 @@
             animation-direction: alternate;
             transform: rotate(-50deg);
         }
+    }
+}
+
+@include mobile {
+    .menu__mobile {
+        display: flex;
     }
 }
