--- a/resources/sass/admin/spec/components/index.scss
+++ b/resources/sass/admin/spec/components/index.scss
@@ -5,6 +5,7 @@
 @import 'easyPieChart';
 @import 'forms';
 @import 'main';
+@import 'setting';
 @import 'masonry';
 @import 'loader';
 @import 'footer';
