--- a/resources/sass/customer/components/_sidebar_filter.scss
+++ b/resources/sass/customer/components/_sidebar_filter.scss
@@ -1,22 +1,27 @@
-.sidebar-filter {
-    padding: 15px;
-    background: white;
-    border: 1px solid #ecf0f1;
-    border-radius: 6px;
-    h2 {
-        font-size: 1.2rem;
+.filter-container {
+    @include mobile {
+        display: none;
     }
-    ul.filter-list {
-        margin-bottom: 0;
-        li.filter-item {
-            line-height: 1.2;
-            margin-bottom: 12px;
-            a.filter-link {
-                color: black;
-                opacity: 1;
-                font-weight: 500;
-                &:hover {
-                    opacity: 0.7;
+    .sidebar-filter {
+        padding: 15px;
+        background: white;
+        border: 1px solid #ecf0f1;
+        border-radius: 6px;
+        h2 {
+            font-size: 1.2rem;
+        }
+        ul.filter-list {
+            margin-bottom: 0;
+            li.filter-item {
+                line-height: 1.2;
+                margin-bottom: 12px;
+                a.filter-link {
+                    color: black;
+                    opacity: 1;
+                    font-weight: 500;
+                    &:hover {
+                        opacity: 0.7;
+                    }
                 }
             }
         }
