--- a/resources/sass/admin/spec/components/main.scss
+++ b/resources/sass/admin/spec/components/main.scss
@@ -4,3 +4,8 @@
 .btn__border {
     border-radius: 25px;
 }
+
+.form-check .form-check-input{
+    font-size: 1rem !important;
+    float: inherit !important;
+}
