--- a/resources/sass/customer/layout/_filter.scss
+++ b/resources/sass/customer/layout/_filter.scss
@@ -1,3 +1,6 @@
+.favorite-product{
+    display: none;
+}
 .filter {
     padding: 3px;
     border-top: 1px solid #ecf0f1;
@@ -67,7 +70,12 @@
 }
 
 @media only screen and (max-width: 900px){
-
+    .favorite-product {
+        display: block;
+    }
+    .favorite-produc-menu {
+        display: none;
+    }
     .filter__btns {
         text-align: center;
         position: sticky !important;
