--- a/resources/sass/customer/layout/_header.scss
+++ b/resources/sass/customer/layout/_header.scss
@@ -7,6 +7,7 @@ header {
     z-index: 1001;
     background: $white;
     .box__auth {
+        align-items: center;
         display: inherit;
     }
     .navbar {
