--- a/resources/sass/customer/pages/_article.scss
+++ b/resources/sass/customer/pages/_article.scss
@@ -26,7 +26,7 @@
             content: url(/icons/noi-bat.svg);
             position: absolute;
             height: 25px;
-            left: 0;
+            left: -4px;
             top: 10px;
             width: 65px;
             z-index: 1;
