--- a/resources/sass/customer/layout/_main.scss
+++ b/resources/sass/customer/layout/_main.scss
@@ -7,6 +7,12 @@ select {
     border-radius: 10px;
 }
 
+.color-red {
+    color: #c0392b !important;
+}
+.color-blue {
+    color: #2980b9;
+}
 textarea {
     border-radius: 10px;
 }
