--- a/resources/sass/customer/pages/_article.scss
+++ b/resources/sass/customer/pages/_article.scss
@@ -37,16 +37,13 @@
     }
     .card__article__body {
         color: #2c3e50 !important;
-        h5 {
-            font-size: 16px;
-        }
         .card__time {
             font-size: 13px;
             color: #7f8c8d !important;
         }
-        .card__title {
-            margin-bottom: 0.5rem;
-            font-size: 0.9rem !important;
+        .card-title {
+            font-size: 1rem !important;
+            font-weight: 600;
             &:hover {
                 color: #2980b9;
             }
