--- a/resources/sass/customer/pages/_detail_post.scss
+++ b/resources/sass/customer/pages/_detail_post.scss
@@ -43,7 +43,8 @@
         .card__article__body {
             color: #2c3e50 !important;
             h5 {
-                font-size: 16px;
+                font-size: 1rem !important;
+                font-weight: 600;
             }
             .card__time {
                 font-size: 13px;
