--- a/resources/sass/customer/style.scss
+++ b/resources/sass/customer/style.scss
@@ -48,6 +48,7 @@
 @import './components/data-list';
 @import './components/action_menu_mobile';
 @import './components/sidebar_filter';
+@import './components/text';
 
 /**======================*
     Import pages
