--- a/resources/sass/customer/layout/_main.scss
+++ b/resources/sass/customer/layout/_main.scss
@@ -11,7 +11,7 @@ select {
     color: #c0392b !important;
 }
 .color-blue {
-    color: #2980b9;
+    color: #2980b9 !important;
 }
 textarea {
     border-radius: 10px;
