--- a/resources/sass/customer/components/_forms.scss
+++ b/resources/sass/customer/components/_forms.scss
@@ -15,3 +15,32 @@
 .text-required {
     color: #f00;
 }
+
+.bootstrap-tagsinput {
+    padding: 0.8rem 0.85rem !important;
+    border-radius: 10px;
+    .tag {
+        background-color: $primary;
+        margin-right: 2px;
+        color: $white;
+        font-size: 0.8rem;
+        padding: 0 5px;
+        border-radius: 3px;
+    }
+    span[data-role="remove"] {
+        margin-left: 4px;
+        padding-left: 4px;
+        vertical-align: text-bottom;
+        border-left: 1px solid $white;
+        cursor: pointer;
+        &::after {
+            content: "x";
+        }
+    }
+    input {
+        border: none;
+        &:focus-visible {
+            outline: none;
+        }
+    }
+}
