--- a/resources/sass/customer/pages/_article.scss
+++ b/resources/sass/customer/pages/_article.scss
@@ -23,7 +23,7 @@
     }
     .card-featured {
         &:before {
-            content: url(/icons/noi-bat.svg);
+            content: url(/noi-bat.svg);
             position: absolute;
             height: 25px;
             left: -4px;
