--- a/resources/sass/customer/components/_forms.scss
+++ b/resources/sass/customer/components/_forms.scss
@@ -12,8 +12,31 @@
     box-shadow: rgb(182 182 182 / 18%) 1px 1px 20px 3px;
 }
 
+.ck-editor {
+    &.is-invalid {
+        .ck-content {
+            background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23dc3545'%3E%3Ccircle cx='6' cy='6' r='4.5'/%3E%3Cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3E%3Ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3E%3C/svg%3E") !important;
+            background-position: right calc(0.375em + 0.1875rem) center !important;
+            background-repeat: no-repeat !important;
+            background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem) !important;
+            border-color: #dc3545 !important;
+            padding-right: calc(1.5em + 0.75rem) !important;
+        }
+    }
+    &.is-valid {
+        .ck-content {
+            border-color: #198754 !important;
+            padding-right: calc(1.5em + 0.75rem);
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e") !important;
+            background-repeat: no-repeat !important;
+            background-position: right calc(0.375em + 0.1875rem) center !important;
+            background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem) !important;
+        }
+    }
+}
+
 .text-required {
-    color: #f00;
+    color: #dc3545;
 }
 
 .bootstrap-tagsinput {
