--- a/resources/sass/customer/style.scss
+++ b/resources/sass/customer/style.scss
@@ -54,6 +54,7 @@
     Import pages
 *========================*/
 
+@import './pages/home';
 @import './pages/post';
 @import './pages/detail_post';
 @import './pages/list_article';
