--- a/resources/sass/admin/spec/components/main.scss
+++ b/resources/sass/admin/spec/components/main.scss
@@ -43,3 +43,11 @@
 .paginate-styling svg{
     width: 20px !important;
 }
+
+
+.btn__header__page{
+    color: #fff;
+    border: 1px solid;
+    border-radius: 30px;
+    margin: 0 5px;
+}
