--- a/resources/sass/customer/abstracts/_variables.scss
+++ b/resources/sass/customer/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 $primary: #3498DB; // Màu chủ đạo
 $black: #000;
 $default-errors: red;
+$grey: #616161;
 // ============
 $font-primary: 16px; // cỡ chữ chủ đạo
