--- a/resources/sass/customer/style.scss
+++ b/resources/sass/customer/style.scss
@@ -57,6 +57,7 @@
 @import './pages/home';
 @import './pages/post';
 @import './pages/detail_post';
+@import './pages/news_list';
 @import './pages/detail_news';
 @import './pages/list_article';
 @import './pages/article';
